[package]
name = "box-hyper-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.3.1"
http-body-util = "0.1.3"
hyper = {version="1.6.0" ,features=["full"]}
hyper-util = {version="0.1.16", features=["full"]}
rcgen = "0.14.3"
rustls-pki-types = "1.12.0"
tokio ={version="1.47.0" , features=["full"]}
tokio-rustls = "0.26.2"
